Test de BackEnd

--- a/reports/RegisterUrl-backTest.html
+++ b/reports/RegisterUrl-backTest.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">jun 27, 2024 02:45:16 a.m.</span></a>
+<a href="#"><span class="badge badge-primary">jun 27, 2024 02:29:37 a.m.</span></a>
 </li>
 </ul>
 </div>
@@ -74,14 +74,14 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="pass" test-id="6"
+        <li class="test-item"  status="pass" test-id="3"
           author=""
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">successful user Login</p>
+            <p class="name">Test Register Url</p>
             <p class="text-sm">
-              <span>2:45:29 a.m.</span> / <span>00:00:01:271</span>
+              <span>2:29:37 a.m.</span> / <span>00:00:00:301</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,11 +89,11 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">successful user Login</h5>
-<span class='badge badge-success'>06.27.2024 2:45:29 a.m.</span>
-<span class='badge badge-danger'>06.27.2024 2:45:31 a.m.</span>
-<span class='badge badge-default'>00:00:01:271</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
+<h5 class="test-status text-pass">Test Register Url</h5>
+<span class='badge badge-success'>06.27.2024 2:29:37 a.m.</span>
+<span class='badge badge-danger'>06.27.2024 2:29:37 a.m.</span>
+<span class='badge badge-default'>00:00:00:301</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
@@ -105,30 +105,16 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>2:45:29 a.m.</td>
+        <td>2:29:37 a.m.</td>
         <td>
-          Start test
+          Test Register Url
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>2:45:29 a.m.</td>
+        <td>2:29:37 a.m.</td>
         <td>
-          Login a user 
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log info-bg">Info</span></td>
-        <td>2:45:30 a.m.</td>
-        <td>
-          Loaded User Data
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>2:45:31 a.m.</td>
-        <td>
-          User logged in successfully
+          Status Code: 200
         </td>
       </tr>
   </tbody>
@@ -150,13 +136,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>jun 27, 2024 02:45:16 a.m.</h3>
+<h3>jun 27, 2024 02:29:37 a.m.</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>jun 27, 2024 02:45:31 a.m.</h3>
+<h3>jun 27, 2024 02:29:37 a.m.</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -207,10 +193,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='50%'><b>2</b> events passed</small></div>
+<div><small data-tooltip='50%'><b>1</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
-<b data-tooltip='%'>2</b> others
+<b data-tooltip='%'>1</b> others
 </small>
 </div>
 </div>
@@ -226,7 +212,7 @@
 </div></div>
 <script>
 var timeline = {
-"successful user Login":1.271
+"Test Register Url":0.301
 };
 </script>
 <div class="row">
@@ -278,11 +264,11 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 2,
+passEvents: 1,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
-infoEvents: 2
+infoEvents: 1
 };
 </script>        </div>
       </div>
